:bug: Negative shifts
The negative shifts bug now it's working

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,10 +2,9 @@
   --primary-color: #006cff;
   --secondary-color: #1255b3;
   --white: #fff;
-  --gray: #e6e9ed;
   --black: #303133;
   --error-color: #ff0000;
-  --border-radius: 5px;
+  --border-radius: 4px;
   --primary-font: Arial, Helvetica, sans-serif;
 }
 
@@ -37,7 +36,7 @@ button {
   text-transform: uppercase;
   background-color: var(--secondary-color);
   border: none;
-  border-radius: 4px;
+  border-radius: var(--border-radius);
   cursor: pointer;
 }
 
@@ -61,6 +60,9 @@ button {
 }
 
 .main-container {
+  min-height: calc(100vh - 160px);
+  display: grid;
+  grid-template-columns: 1fr;
   padding: 20px;
 }
 
